--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  color: black;
+  color: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
   margin: 3rem 4rem 1rem 4rem;
