--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -2,7 +2,8 @@
   color: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
-  margin: 3rem 4rem 1rem 4rem;
+  margin: 0rem 4rem 1rem 4rem;
+  padding-top: 2rem;
 
   .nav-logo {
   }
