update styling for footer and episodes page

--- a/src/styles/Episodes.scss
+++ b/src/styles/Episodes.scss
@@ -6,6 +6,7 @@
 .episodes-container {
   background: #271000;
   color: #fff;
+  padding-bottom: 50px;
 
   .episodes-title {
     text-align: center;
@@ -30,5 +31,6 @@
   .episodes-paragraph {
     text-align: center;
     margin: 0em;
+    margin: 1em 15em 2em 15em;
   }
 }
