--- a/src/styles/Events.scss
+++ b/src/styles/Events.scss
@@ -2,3 +2,11 @@
   background-image: url(../assets/11.png);
   height: 650px;
 }
+
+.events-container {
+  .events-title {
+  }
+
+  .events-title2 {
+  }
+}
