--- a/src/styles/Episodes.scss
+++ b/src/styles/Episodes.scss
@@ -1,6 +1,9 @@
 .episodes-header-image {
   background-image: url(../assets/6.png);
   height: 650px;
+  min-width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .episodes-container {
