--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,6 +1,9 @@
 .homepage-header-image {
   background-image: url(../assets/1.png);
   height: 650px;
+  min-width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .homepage-text-container {
