--- a/src/styles/Events.scss
+++ b/src/styles/Events.scss
@@ -19,15 +19,20 @@
   .events-liveshow-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 10em 0em 10em;
 
     .events-liveshow-card {
       margin: 1.2em;
-      padding: 2rem 4rem 2rem 4rem;
+      padding: 1.5rem 4rem 2rem 4rem;
       border-radius: 50px;
-      // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-      box-shadow: #482d1061 0px 4px 34px;
+      box-shadow: 4px 4px 32px 1px rgba(0, 0, 0, 0.25);
       background: #ebdab6;
       color: #271000;
+      &:hover {
+        color: #ebdab6;
+        background: #866042;
+      }
 
       .events-liveshow-title {
         text-align: center;
@@ -46,17 +51,37 @@
   .events-title2 {
     text-align: center;
     color: #ebdab6;
+    padding-top: 3rem;
+    margin: 0em;
   }
 
   .upcoming-event-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1.5rem 10em 2em 10em;
+
     .upcoming-event-card {
+      margin: 1.2em;
+      padding: 2rem 4rem 2rem 4rem;
+      border-radius: 50px;
+      box-shadow: 4px 4px 32px 1px rgba(0, 0, 0, 0.25);
+      background: #3a1b0f;
+      color: #ebdab6;
+      &:hover {
+        color: #ebdab6;
+        background: #866042;
+      }
       .upcoming-event-title {
+        text-align: center;
       }
 
       .upcoming-event-date {
+        text-align: center;
       }
 
       .upcoming-event-info {
+        text-align: center;
       }
     }
   }
