--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -6,6 +6,13 @@
   padding-top: 2rem;
 
   .nav-logo {
+    a {
+      color: #fff;
+      text-decoration: none;
+      &:hover {
+        color: #ebdab6;
+      }
+    }
   }
 
   .nav-items {
