add some styling to about images

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -10,11 +10,13 @@
   background: #3a1b0f;
   display: flex;
   // justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   padding: 0rem 7rem 2rem 7rem;
 
   .about-who {
-    width: 30%;
+    width: 50%;
+    margin-right: 3rem;
 
     .about-who-title {
       color: #ebdab6;
@@ -26,11 +28,12 @@
   }
 
   .about-who-img-div {
-    width: 30%;
+    width: 40%;
 
     .about-who-img {
-      height: 200px;
-      width: 40%;
+      height: 300px;
+      background-size: cover;
+      width: 100%;
     }
   }
 }
