--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -6,17 +6,35 @@
     margin: 0em;
     text-align: center;
     padding-top: 3rem;
+    color: #ebdab6;
   }
 
   .contact-social-icons-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    padding-bottom: 4rem;
+    margin-top: 1rem;
+
     a {
+      text-decoration: none;
+      color: #ebdab6;
+      &:hover {
+        color: #866042;
+      }
+
       .contact-social-icons {
         color: #ebdab6;
-        margin: 0rem 1rem 1rem 0rem;
+        // margin-top: 1rem;
+        margin: 1rem 1rem 0rem 0rem;
+        // margin-bottom: 1rem;
+
         &:hover {
-          color: #271000;
+          color: #866042;
+        }
+
+        .contact-social-text {
+          text-decoration: none;
         }
       }
     }
