--- a/src/styles/Episodes.scss
+++ b/src/styles/Episodes.scss
@@ -10,6 +10,7 @@
   background: #271000;
   color: #fff;
   padding-bottom: 50px;
+  font-family: "Cardo", serif;
 
   .episodes-title {
     text-align: center;
