--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   padding: 2em 7em 2em 6em;
+  font-family: "Cardo", serif;
 
   .footer-logo {
     color: #fff;
