--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -10,6 +10,7 @@
   background-color: #866042;
   color: white;
   padding-bottom: 50px;
+  font-family: "Cardo", serif;
 
   .homepage-text-title {
     margin: 0em;
@@ -24,6 +25,7 @@
   }
 
   .homepage-button {
+    font-family: "Cardo", serif;
     margin: 0 auto;
     display: block;
     background: white;
