--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   margin: 0rem 4rem 1rem 4rem;
   padding-top: 2rem;
+  font-family: "Cardo", serif;
 
   .nav-logo {
     a {
