--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -29,3 +29,21 @@
     }
   }
 }
+
+@media screen and (max-width: 576px) {
+  .nav {
+    margin: 0rem 1rem 1rem 4rem;
+
+    .nav-logo {
+      a {
+        margin-right: 8rem;
+      }
+    }
+
+    .nav-items {
+      a {
+        margin-top: 1rem;
+      }
+    }
+  }
+}
