--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -32,15 +32,18 @@
 
 @media screen and (max-width: 576px) {
   .nav {
-    margin: 0rem 1rem 1rem 4rem;
+    margin: 0rem 0rem 0rem 3rem;
+    padding-top: 0rem;
 
     .nav-logo {
-      a {
-        margin-right: 8rem;
-      }
+      margin-top: 2rem;
     }
 
     .nav-items {
+      display: flex;
+      flex-direction: column;
+      margin-top: 1rem;
+
       a {
         margin-top: 1rem;
       }
