--- a/src/styles/Episodes.scss
+++ b/src/styles/Episodes.scss
@@ -38,3 +38,23 @@
     margin: 1em 15em 2em 15em;
   }
 }
+
+@media screen and (max-width: 576px) {
+  .episodes-container {
+    padding-bottom: 25px;
+
+    .episodes-paragraph {
+      margin: 1em 3em 2em 3em;
+    }
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .episodes-container {
+    padding-bottom: 25px;
+
+    .episodes-paragraph {
+      margin: 1em 7em 2em 7em;
+    }
+  }
+}
