--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -51,7 +51,7 @@
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 576px) and (max-width: 992px) {
   .nav {
     margin: 0rem 3rem 0rem 3rem;
     padding-top: 0rem;
