--- a/src/styles/Events.scss
+++ b/src/styles/Events.scss
@@ -90,15 +90,24 @@
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
   .events-container {
-    background: #866042;
-    font-family: "Cardo", serif;
-
     .events-liveshow-container {
       padding: 2rem 4em 0em 4em;
     }
 
     .upcoming-event-container {
       padding: 1.5rem 4em 2em 4em;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .events-container {
+    .events-liveshow-container {
+      padding: 2rem 2em 0em 2em;
+    }
+
+    .upcoming-event-container {
+      padding: 1.5rem 2em 2em 2em;
     }
   }
 }
