start over with products and store data

--- a/frontend/src/styles/About.scss
+++ b/frontend/src/styles/About.scss
@@ -1,5 +1,5 @@
 .about-header-image {
-  background-image: url(../assets/2.png);
+  background-image: url(../images/2.png);
   background-repeat: no-repeat;
   height: 650px;
   min-width: 100%;
