--- a/frontend/src/styles/Episodes.scss
+++ b/frontend/src/styles/Episodes.scss
@@ -1,5 +1,5 @@
 .episodes-header-image {
-  background-image: url(../assets/6.png);
+  background-image: url(../images/6.png);
   height: 650px;
   min-width: 100%;
   background-size: cover;
