--- a/frontend/src/styles/Events.scss
+++ b/frontend/src/styles/Events.scss
@@ -1,5 +1,5 @@
 .events-header-image {
-  background-image: url(../assets/11.png);
+  background-image: url(../images/11.png);
   background-repeat: no-repeat;
   height: 650px;
   min-width: 100%;
