--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,5 +1,5 @@
 .homepage-header-image {
-  background-image: url(../assets/1.png);
+  background-image: url(../images/1.png);
   height: 650px;
   min-width: 100%;
   background-size: cover;
