--- a/frontend/src/styles/Nav.scss
+++ b/frontend/src/styles/Nav.scss
@@ -1,5 +1,6 @@
 .nav {
   color: rgb(255, 255, 255);
+  background-color: black;
   display: flex;
   justify-content: space-between;
   margin: 0rem 4rem 1rem 4rem;
