create pages folder to organize components and screens

--- a/frontend/src/styles/About.scss
+++ b/frontend/src/styles/About.scss
@@ -1,5 +1,7 @@
 .about-header-image {
-  background-image: url(../images/2.png);
+  // background-image: url(../images/3.png);
+  background-image: url(../images/8.png);
+
   background-repeat: no-repeat;
   height: 650px;
   min-width: 100%;
