--- a/frontend/src/styles/Store.scss
+++ b/frontend/src/styles/Store.scss
@@ -1,5 +1,7 @@
 .store-header-image {
   background-image: url(../images/8.png);
+  // background-image: url(/images/8.png);
+
   height: 650px;
   min-width: 100%;
   background-size: cover;
