add new nav on pages

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -24,10 +24,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(163, 15, 15);
+  font-family: "Cardo", serif;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #229e22;
 }
 
 @keyframes App-logo-spin {
