--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -32,8 +32,10 @@
     border: none;
     border-radius: 10px;
     padding: 10px 25px 10px 25px;
+    box-shadow: 4px 4px 32px 1px rgba(0, 0, 0, 0.25);
+
     &:hover {
-      background: #5c3a15;
+      background: #866042;
       color: #fff;
     }
   }
