style order history page

--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -28,7 +28,7 @@
     font-family: "Cardo", serif;
     margin: 0 auto;
     display: block;
-    background: white;
+    background: #ebdab6;
     border: none;
     border-radius: 10px;
     padding: 10px 25px 10px 25px;
