--- a/frontend/src/styles/CheckoutSteps.scss
+++ b/frontend/src/styles/CheckoutSteps.scss
@@ -1,13 +1,13 @@
 .checkout-steps {
   div {
-    border-bottom: 0.2rem solid #a0a0a0;
-    color: #a0a0a0;
+    border-bottom: 0.2rem solid #d1d1d1;
+    color: #d1d1d1;
   }
 }
 
 .checkout-steps {
   div.active {
-    border-bottom: 0.2rem solid #f08000;
-    color: #f08000;
+    border-bottom: 0.2rem solid #866042;
+    color: #866042;
   }
 }
