--- a/frontend/src/styles/Nav.scss
+++ b/frontend/src/styles/Nav.scss
@@ -4,8 +4,14 @@
     font-size: 30px;
   }
 
+  .nav-toggle {
+    background-color: #271000;
+    // border-color: #866042 !important;
+    border-color: none;
+  }
+
   .nav-dropdown {
-    background-color: #271000e0;
+    // background-color: #271000e0;
     border-radius: 10px;
     padding: 1rem 2rem 1rem 2rem;
 
