add highlighted episodes to episodes page

--- a/frontend/src/styles/Episodes.scss
+++ b/frontend/src/styles/Episodes.scss
@@ -37,6 +37,66 @@
     margin: 0em;
     margin: 1em 15em 2em 15em;
   }
+
+  .highlighted-episodes-container {
+    padding: 2rem 3em 0em 3em;
+
+    .highlighted-episodes-heading {
+      color: #ebdab6;
+      text-align: center;
+      // margin-bottom: 1em;
+    }
+
+    .embedded {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .embedded-ep {
+        margin-right: 1em;
+        margin-left: 1em;
+        padding-top: 1px;
+        margin-top: 1em;
+      }
+    }
+
+    .highlighted-episodes {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .highlighted-episodes-card {
+        margin: 1.2em;
+        padding: 2rem 2rem 2rem 2rem;
+        border-radius: 50px;
+        box-shadow: 4px 4px 32px 1px rgba(0, 0, 0, 0.25);
+        background: #ebdab6;
+        color: #271000;
+        width: 30%;
+        &:hover {
+          color: #ebdab6;
+          background: #866042;
+        }
+        a {
+          color: #271000;
+          &:hover {
+            color: #ebdab6;
+          }
+        }
+
+        .highlighted-episodes-title {
+          text-align: center;
+          font-weight: bolder;
+          font-size: 22px;
+        }
+
+        .highlighted-episodes-description {
+          text-align: center;
+          font-size: 18px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 576px) {
