--- a/frontend/src/styles/Nav.scss
+++ b/frontend/src/styles/Nav.scss
@@ -15,11 +15,13 @@
 
   .nav-dropdown {
     border-radius: 10px;
-    padding: 1rem 2rem 1rem 2rem;
+    padding: 1rem 1rem 1rem 1rem;
+    z-index: 100;
 
     #nav-links-container {
       display: flex;
       justify-content: flex-end;
+      z-index: 100;
 
       .nav-links {
         color: white;
