--- a/frontend/src/styles/Events.scss
+++ b/frontend/src/styles/Events.scss
@@ -89,6 +89,11 @@
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
+  .events-header-image {
+    height: 400px;
+    max-height: auto;
+  }
+
   .events-container {
     .events-liveshow-container {
       padding: 2rem 2em 0em 2em;
@@ -101,6 +106,11 @@
 }
 
 @media screen and (max-width: 576px) {
+  .events-header-image {
+    height: 250px;
+    max-height: auto;
+  }
+
   .events-container {
     .events-liveshow-container {
       padding: 2rem 2em 0em 2em;
