--- a/frontend/src/styles/About.scss
+++ b/frontend/src/styles/About.scss
@@ -1,7 +1,5 @@
 .about-header-image {
-  // background-image: url(../images/3.png);
   background-image: url(../images/8.png);
-
   background-repeat: no-repeat;
   height: 650px;
   min-width: 100%;
@@ -12,13 +10,15 @@
   background: #3a1b0f;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  padding: 0rem 7rem 2rem 7rem;
+  padding: 2rem 5rem 2rem 5rem;
   font-family: "Cardo", serif;
 
   .about-who {
-    width: 50%;
-    margin-right: 3rem;
+    width: 34%;
+    margin-right: 2rem;
+    margin-left: 2rem;
 
     .about-who-title {
       color: #ebdab6;
@@ -30,13 +30,13 @@
   }
 
   .about-who-img-div {
-    width: 40%;
-    margin-top: 3rem;
+    width: 48%;
+    margin-right: 2rem;
+    margin-left: 2rem;
 
     .about-who-img {
       height: 300px;
       background-size: cover;
-      width: 100%;
       border-radius: 50px;
     }
   }
@@ -108,6 +108,129 @@
 
     .about-mission-text {
       margin: 6em;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .about-header-image {
+    height: 400px;
+    height: auto;
+  }
+
+  .about-who-container {
+    padding: 2rem 1rem 2rem 1rem;
+
+    .about-who {
+      width: 100%;
+      margin-right: 1rem;
+      margin-left: 1rem;
+
+      .about-who-title {
+        color: #ebdab6;
+      }
+
+      .about-who-paragraph {
+        color: white;
+      }
+    }
+
+    .about-who-img-div {
+      width: 100%;
+
+      text-align: center;
+
+      .about-who-img {
+        margin-top: 2rem;
+        height: 300px;
+        background-size: cover;
+        border-radius: 50px;
+      }
+    }
+  }
+
+  .about-team-container {
+    background: #866042;
+    font-family: "Cardo", serif;
+
+    .about-team-title {
+      text-align: center;
+      margin: 0em;
+      color: #ebdab6;
+      padding-top: 3rem;
+    }
+
+    .about-team-container-card {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      color: #fff;
+      margin-left: 5em;
+      margin-right: 5em;
+
+      .about-team-card {
+        border: 1px solid red;
+        width: 30%;
+        margin: 3rem 1rem 3rem 1rem;
+
+        .about-team-name {
+          text-align: center;
+        }
+
+        .about-team-img {
+          background-size: cover;
+          width: 100%;
+          border-radius: 50px;
+        }
+
+        .about-team-description {
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  .about-mission-container {
+    display: flex;
+    justify-content: center;
+    background: #271000;
+    color: #ebdab6;
+    padding-left: 7rem;
+    padding-right: 7rem;
+    padding-top: 3rem;
+
+    .about-mission-titles {
+      width: 40%;
+      font-family: "Great Vibes", cursive;
+
+      .about-mission {
+        margin: 0em;
+        padding: 2em;
+        font-size: 50px;
+      }
+    }
+
+    .about-mission-paragraph {
+      font-family: "Cardo", serif;
+
+      .about-mission-text {
+        margin: 6em;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .episodes-header-image {
+    height: 400px;
+    max-height: auto;
+  }
+
+  .episodes-container {
+    padding-bottom: 25px;
+
+    .episodes-paragraph {
+      margin: 1em 7em 2em 7em;
     }
   }
 }
