create protected routes for logged in users and admin, set up admin dropdown, alter styling

--- a/frontend/src/styles/Nav.scss
+++ b/frontend/src/styles/Nav.scss
@@ -26,6 +26,7 @@
       .nav-links {
         color: white;
         margin-left: 0.5rem;
+        text-decoration: none;
         &:hover {
           color: #ebdab6;
         }
