--- a/frontend/src/styles/ShippingPage.scss
+++ b/frontend/src/styles/ShippingPage.scss
@@ -96,3 +96,42 @@
     padding: 1em 3em 2em 3em;
   }
 }
+
+//Profile Page
+.profile-header-image {
+  background-image: url(../images/1.png);
+  height: 380px;
+  min-width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.profile-container {
+  padding: 2em 20em 2em 20em;
+
+  .profile-button {
+    background-color: #866042;
+    color: #fff;
+    border: none;
+    padding: 10px 28px 10px 28px;
+    font-size: 17px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 20px 1px #27100027;
+    &:hover {
+      color: #271000;
+      background-color: #ebdab6;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .profile-container {
+    padding: 2em 2em 2em 2em;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .profile-container {
+    padding: 2em 5em 2em 5em;
+  }
+}
