--- a/frontend/src/styles/Dashboard.scss
+++ b/frontend/src/styles/Dashboard.scss
@@ -13,3 +13,21 @@
     padding: 2em 5em 2em 5em;
   }
 }
+
+//Products Page 
+.products-admin-container {
+  padding: 2em 7em 2em 7em;
+
+}
+
+@media screen and (max-width: 576px) {
+  .products-admin-container {
+    padding: 2em 2em 2em 2em;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .products-admin-container {
+    padding: 2em 5em 2em 5em;
+  }
+}
