--- a/frontend/src/styles/Dashboard.scss
+++ b/frontend/src/styles/Dashboard.scss
@@ -31,3 +31,38 @@
     padding: 2em 5em 2em 5em;
   }
 }
+
+//Order List Page
+.order-list-admin-container {
+  padding: 2em 7em 2em 7em;
+}
+
+@media screen and (max-width: 576px) {
+  .order-list-admin-container {
+    padding: 2em 2em 2em 2em;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .order-list-admin-container {
+    padding: 2em 5em 2em 5em;
+  }
+}
+
+//User List Page
+.user-list-admin-container {
+  padding: 2em 7em 2em 7em;
+}
+
+@media screen and (max-width: 576px) {
+  .user-list-admin-container {
+    padding: 2em 2em 2em 2em;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .user-list-admin-container {
+    padding: 2em 5em 2em 5em;
+  }
+}
+
