--- a/frontend/src/styles/ShippingPage.scss
+++ b/frontend/src/styles/ShippingPage.scss
@@ -32,19 +32,26 @@
 .payment-container {
   padding: 2em 3em 2em 3em;
 
-  .payment-button {
-    background-color: #866042;
-    color: #fff;
-    border: none;
-    padding: 10px 28px 10px 28px;
-    font-size: 17px;
-    border-radius: 10px;
-    box-shadow: 4px 4px 20px 1px #27100027;
-    &:hover {
-      color: #271000;
-      background-color: #ebdab6;
+  .payment-content {
+  padding: 1em 5em 0em 5em;
+
+
+
+    .payment-button {
+      background-color: #866042;
+      color: #fff;
+      border: none;
+      padding: 10px 28px 10px 28px;
+      font-size: 17px;
+      border-radius: 10px;
+      box-shadow: 4px 4px 20px 1px #27100027;
+      &:hover {
+        color: #271000;
+        background-color: #ebdab6;
+      }
     }
   }
+
 }
 
 //Place Order Page
