--- a/frontend/src/styles/Nav.scss
+++ b/frontend/src/styles/Nav.scss
@@ -1,6 +1,10 @@
 .nav-container {
   z-index: 100;
-  background-color: #27100054;
+  // background-color: #27100054;
+  background: #5C3A15;
+  box-shadow: 4px 4px 20px 1px #27100027;
+  // z-index: 1000;
+
 
   .nav-logo {
     font-size: 30px;
@@ -16,7 +20,7 @@
   .nav-dropdown {
     border-radius: 10px;
     padding: 1rem 1rem 1rem 1rem;
-    z-index: 100;
+    z-index: 1000;
 
     #nav-links-container {
       display: flex;
