update styling for products on store page

--- a/frontend/src/styles/Product.scss
+++ b/frontend/src/styles/Product.scss
@@ -1,67 +1,145 @@
-.store-backlink {
-  font-family: "Cardo", serif;
-  // text-decoration: none;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none;
-  color: #3a1b0f;
+.product-container {
+  width: 30%;
 
-  &:hover {
-    color: #866042;
-  }
-}
+  .product {
+    margin-right: 2rem;
+    margin-left: 2rem;
+    margin-bottom: 3rem;
 
-.product-details-container {
-  font-family: "Cardo", serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-
-  .product-details-image {
-    flex: 2 1 60rem;
-
-    img {
-      max-width: 60rem;
+    .product-img-div {
       width: 100%;
-    }
-  }
 
-  .product-details-info {
-    flex: 1 1 30rem;
-
-    .product-details-name {
-    }
-
-    .product-details-price {
-    }
-
-    .product-details-description {
-    }
-  }
-
-  .product-action {
-    border: 0.1rem black solid;
-    border-radius: 30px;
-    background-color: rgb(243, 243, 243);
-    padding: 3em;
-
-    .product-qty {
-    }
-
-    .product-cart-button {
-      display: flex;
-      flex-direction: column;
-      padding: 1rem;
-      cursor: pointer;
-      background-color: #866042;
-      color: white;
-      border: none;
-      margin-top: 2rem;
-
-      &:hover {
-        background-color: #3a1b0f;
+      .about-team-img {
+        transition: transform 0.5s ease;
+        object-fit: cover;
+        height: 300px;
+        width: 100%;
       }
     }
+
+    .product-name {
+      font-weight: bold;
+      font-size: 20px;
+      text-decoration: none;
+      color: #3a1b0f;
+      margin-top: 1rem;
+
+      &:hover {
+        color: #866042;
+      }
+    }
+
+    .product-price {
+      font-weight: normal;
+      font-size: 17px;
+      color: #3a1b0f;
+    }
+
+    .add-to-cart-button {
+      background-color: #866042;
+      color: #fff;
+      border: none;
+      padding: 10px 28px 10px 28px;
+      font-size: 16px;
+      border-radius: 10px;
+      &:hover {
+        color: #271000;
+        background-color: #ebdab6;
+      }
+    }
+    
+  }
+
+  a {
+    text-decoration: none;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .store-backlink {
+//   font-family: "Cardo", serif;
+//   // text-decoration: none;
+//   font-weight: bold;
+//   font-size: 20px;
+//   text-decoration: none;
+//   color: #3a1b0f;
+
+//   &:hover {
+//     color: #866042;
+//   }
+// }
+
+// .product-details-container {
+//   font-family: "Cardo", serif;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: flex-start;
+//   flex-wrap: wrap;
+
+//   .product-details-image {
+//     flex: 2 1 60rem;
+
+//     img {
+//       max-width: 60rem;
+//       width: 100%;
+//     }
+//   }
+
+//   .product-details-info {
+//     flex: 1 1 30rem;
+
+//     .product-details-name {
+//     }
+
+//     .product-details-price {
+//     }
+
+//     .product-details-description {
+//     }
+//   }
+
+//   .product-action {
+//     border: 0.1rem black solid;
+//     border-radius: 30px;
+//     background-color: rgb(243, 243, 243);
+//     padding: 3em;
+
+//     .product-qty {
+//     }
+
+//     .product-cart-button {
+//       display: flex;
+//       flex-direction: column;
+//       padding: 1rem;
+//       cursor: pointer;
+//       background-color: #866042;
+//       color: white;
+//       border: none;
+//       margin-top: 2rem;
+
+//       &:hover {
+//         background-color: #3a1b0f;
+//       }
+//     }
+//   }
+// }
