--- a/frontend/src/styles/Cart.scss
+++ b/frontend/src/styles/Cart.scss
@@ -2,7 +2,7 @@
   padding: 2em 9em 2em 9em;
 
   .cart-button {
-    background-color: #866042 !important;
+    background-color: #866042;
     color: #fff;
     border: none;
     padding: 10px 28px 10px 28px;
