--- a/frontend/src/styles/Store.scss
+++ b/frontend/src/styles/Store.scss
@@ -13,6 +13,7 @@
   .store-title {
     text-align: center;
     padding-top: 3rem;
+    padding-bottom: 1rem;
     margin: 0em;
     color: #3a1b0f;
   }
@@ -25,33 +26,6 @@
       justify-content: space-evenly;
       margin-bottom: 2rem;
       margin-top: 2rem;
-
-      .product {
-        margin-right: 2rem;
-        margin-left: 2rem;
-
-        .about-team-img {
-          width: 30%;
-          background-size: cover;
-        }
-
-        .product-name {
-          font-weight: bold;
-          font-size: 20px;
-          text-decoration: none;
-          color: #3a1b0f;
-
-          &:hover {
-            color: #866042;
-          }
-        }
-
-        .product-price {
-          font-weight: normal;
-          font-size: 17px;
-          color: #3a1b0f;
-        }
-      }
     }
   }
 }
