--- a/frontend/src/styles/Cart.scss
+++ b/frontend/src/styles/Cart.scss
@@ -3,6 +3,7 @@
 
   .cart-button {
     background-color: #866042;
+    box-shadow: 4px 4px 32px 1px rgba(0, 0, 0, 0.096);
     color: #fff;
     border: none;
     padding: 10px 28px 10px 28px;
