--- a/frontend/src/styles/ProductPage.scss
+++ b/frontend/src/styles/ProductPage.scss
@@ -1,27 +1,87 @@
 .single-product-container {
+  padding: 4em 5em 2em 5em;
   display: flex;
-  justify-content: space-evenly;
-  flex-direction: row-reverse;
-  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: #3a1b0f;
 
-  .product-info {
-    .product-name {
-    }
 
-    .product-description {
-    }
+  .product-image-div {
+    width: 50%;
 
-    .product-price {
-    }
-
-    .product-status {
-    }
-
-    .product-button {
-    }
-
-    .product-button-nostock {
-      pointer-events: none;
+    .product-image {
+      width: 100%;
+      height: 500px;
+      object-fit: cover;
     }
   }
+
+  .product-info {
+    width: 30%;
+  }
+
+  .product-checkout {
+    width: 20%;
+
+    .product-button {
+      background-color: #866042;
+      color: #fff;
+      border: none;
+      padding: 10px 28px 10px 28px;
+      font-size: 16px;
+      border-radius: 10px;
+      box-shadow: 4px 4px 32px 1px rgba(0, 0, 0, 0.096);
+
+      &:hover {
+        color: #271000;
+        background-color: #ebdab6;
+      }
+    }
+  }
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .single-product-container {
+//   display: flex;
+//   justify-content: space-evenly;
+//   flex-direction: row-reverse;
+//   padding: 20px;
+
+//   .product-info {
+//     .product-name {
+//     }
+
+//     .product-description {
+//     }
+
+//     .product-price {
+//     }
+
+//     .product-status {
+//     }
+
+//     .product-button {
+//     }
+
+//     .product-button-nostock {
+//       pointer-events: none;
+//     }
+//   }
+// }
