--- a/frontend/src/styles/About.scss
+++ b/frontend/src/styles/About.scss
@@ -12,13 +12,12 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 2rem 5rem 2rem 5rem;
+  padding: 3rem 5rem 3rem 5rem;
   font-family: "Cardo", serif;
 
   .about-who {
     width: 34%;
-    margin-right: 2rem;
-    margin-left: 2rem;
+    margin-right: 3rem;
 
     .about-who-title {
       color: #ebdab6;
@@ -30,14 +29,14 @@
   }
 
   .about-who-img-div {
-    width: 48%;
-    margin-right: 2rem;
-    margin-left: 2rem;
+    width: 50%;
 
     .about-who-img {
-      height: 300px;
-      background-size: cover;
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
       border-radius: 50px;
+      object-fit: cover;
     }
   }
 }
@@ -73,6 +72,7 @@
         background-size: cover;
         width: 100%;
         border-radius: 50px;
+        margin-bottom: 1rem;
       }
 
       .about-team-description {
@@ -84,13 +84,14 @@
 
 .about-mission-container {
   display: flex;
+  flex-wrap: wrap;
   background: #271000;
   color: #ebdab6;
-  flex-wrap: wrap;
   padding: 7rem 11em 7rem 11em;
 
   .about-mission-text-container {
     display: flex;
+    align-items: center;
 
     .about-mission {
       font-family: "Great Vibes", cursive;
@@ -102,13 +103,14 @@
         font-family: "Cardo", serif;
         text-align: center;
         padding-left: 10em;
+        color: white;
       }
   }
 
   .about-vision-text-container {
     display: flex;
     padding-top: 6rem;
-
+    align-items: center;
 
     .about-vision {
       font-family: "Great Vibes", cursive;
@@ -117,15 +119,17 @@
     }
 
     .about-vision-text {
-        font-family: "Cardo", serif;
-        text-align: center;
-        padding-left: 10em;
+      font-family: "Cardo", serif;
+      text-align: center;
+      padding-left: 10em;
+      color: white;
       }
   }
 
   .about-values-text-container {
     display: flex;
     padding-top: 6rem;
+    align-items: center;
 
     .about-values {
       font-family: "Great Vibes", cursive;
@@ -134,133 +138,195 @@
     }
 
     .about-values-text {
-        font-family: "Cardo", serif;
-        text-align: center;
-        padding-left: 10em;
-      }
+      font-family: "Cardo", serif;
+      text-align: center;
+      padding-left: 10em;
+      color: white;
+    }
   }
-
 }
 
 @media screen and (max-width: 576px) {
   .about-header-image {
-    height: 400px;
-    height: auto;
+    height: 250px;
   }
 
   .about-who-container {
-    padding: 2rem 1rem 2rem 1rem;
+    padding: 3rem 1.5rem 3rem 1.5rem;
 
     .about-who {
       width: 100%;
       margin-right: 1rem;
       margin-left: 1rem;
-
-      .about-who-title {
-        color: #ebdab6;
-      }
-
-      .about-who-paragraph {
-        color: white;
-      }
     }
 
     .about-who-img-div {
       width: 100%;
-
       text-align: center;
 
       .about-who-img {
-        margin-top: 2rem;
+        margin-top: 1rem;
         height: 300px;
-        background-size: cover;
-        border-radius: 50px;
+        border-radius: 30px;
       }
     }
   }
 
   .about-team-container {
-    background: #866042;
-    font-family: "Cardo", serif;
-
-    .about-team-title {
-      text-align: center;
-      margin: 0em;
-      color: #ebdab6;
-      padding-top: 3rem;
-    }
+    padding-bottom: 2rem;
 
     .about-team-container-card {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      color: #fff;
-      margin-left: 5em;
-      margin-right: 5em;
+      margin-left: 1rem;
+      margin-right: 1rem;
 
       .about-team-card {
-        border: 1px solid red;
-        width: 30%;
-        margin: 3rem 1rem 3rem 1rem;
-
-        .about-team-name {
-          text-align: center;
-        }
+        width: 100%;
+        margin: 2rem 1rem 0rem 1rem;
 
         .about-team-img {
-          background-size: cover;
           width: 100%;
-          border-radius: 50px;
-        }
-
-        .about-team-description {
-          text-align: center;
+          border-radius: 30px;
+          margin-bottom: 1rem;
         }
       }
     }
   }
 
   .about-mission-container {
-    display: flex;
-    justify-content: center;
-    background: #271000;
-    color: #ebdab6;
-    padding-left: 7rem;
-    padding-right: 7rem;
-    padding-top: 3rem;
-
-    .about-mission-titles {
-      width: 40%;
-      font-family: "Great Vibes", cursive;
-
+    padding: 4rem 2em 4rem 2em;
+  
+    .about-mission-text-container {
+      flex-wrap: wrap;
+      justify-content: center;
+  
       .about-mission {
-        margin: 0em;
-        padding: 2em;
-        font-size: 50px;
+        margin-bottom: 0.5rem;
       }
-    }
-
-    .about-mission-paragraph {
-      font-family: "Cardo", serif;
-
+  
       .about-mission-text {
-        margin: 6em;
+          padding-left: 0em;
+        }
+    }
+  
+    .about-vision-text-container {
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-top: 3rem;
+  
+      .about-vision {
+        margin-bottom: 0.5rem;
       }
+  
+      .about-vision-text {
+        padding-left: 0em;
+        }
+    }
+  
+    .about-values-text-container {
+      flex-wrap: wrap;
+      padding-top: 3rem;
+      justify-content: center;
+  
+      .about-values {
+        margin-bottom: 0.5rem;
+      }
+  
+      .about-values-text {
+        padding-left: 0em;
+        }
     }
   }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .episodes-header-image {
+  .about-header-image {
     height: 400px;
-    max-height: auto;
   }
 
-  .episodes-container {
-    padding-bottom: 25px;
+  .about-who-container {
+    padding: 3rem 3rem 3rem 3rem;
 
-    .episodes-paragraph {
-      margin: 1em 7em 2em 7em;
+    .about-who {
+      width: 100%;
+      margin-right: 1rem;
+      margin-left: 1rem;
+    }
+
+    .about-who-img-div {
+      width: 100%;
+      text-align: center;
+
+      .about-who-img {
+        margin-top: 1.5rem;
+        height: 350px;
+        border-radius: 50px;
+      }
+    }
+  }
+
+  .about-team-container {
+    padding-bottom: 2rem;
+
+    .about-team-container-card {
+      margin-left: 1rem;
+      margin-right: 1rem;
+
+      .about-team-card {
+        width: 65%;
+        margin: 2rem 1rem 0rem 1rem;
+
+        .about-team-img {
+          width: 100%;
+          border-radius: 50px;
+          margin-bottom: 1.5rem;
+          margin-top: 0.5rem;
+        }
+      }
+    }
+  }
+
+  .about-mission-container {
+    padding: 4rem 5em 4rem 5em;
+  
+    .about-mission-text-container {
+      justify-content: center;
+      flex-wrap: wrap;
+  
+      .about-mission {
+        margin-bottom: 0.5rem;
+      }
+  
+      .about-mission-text {
+          padding-left: 0em;
+        }
+    }
+  
+    .about-vision-text-container {
+      justify-content: center;
+      padding-top: 4rem;
+      flex-wrap: wrap;
+
+      .about-vision {
+        margin-bottom: 0.5rem;
+      }
+  
+      .about-vision-text {
+        padding-left: 0em;
+        }
+    }
+  
+    .about-values-text-container {
+      padding-top: 4rem;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .about-values {
+        margin-bottom: 0.5rem;
+      }
+  
+      .about-values-text {
+        padding-left: 0em;
+        }
     }
   }
 }
